finish single profile page

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "building social media with mern stack",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server",
+    "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
